testing memory consumption and adding converting function