@@ -10,12 +10,14 @@
                  [rolling-stones "1.0.2"]
                  [org.clojure/core.logic "1.0.1"]
                  [com.taoensso/timbre "5.2.1"]
+                 [com.clojure-goes-fast/clj-memory-meter "0.1.3"]
                  [com.bhauman/rebel-readline "0.1.4"]]
   :plugins [[lein-cloverage "1.2.3"]
             [lein-kibit "0.1.8"]
             [lein-ancient "0.7.0"]
             [lein-bikeshed "0.5.2"]
             [jonase/eastwood "1.2.3"]]
+  :jvm-opts ["-Djdk.attach.allowAttachSelf"]
   :main ^:skip-aot kigen.core
   :target-path "target/%s"
   :profiles {:uberjar {:aot :all}}
